Added HTML layout

--- a/index.html
+++ b/index.html
@@ -7,4 +7,113 @@
 </head>
 
 <body>
+    <div class="main container column">
+
+        <!-- Section 1 -->
+        <div class="section-1 container column">
+
+            <!-- Header -->
+            <div class="header container row">
+                <!-- Header Logo -->
+                <div class="header-logo">Header Logo</div>
+
+                <!-- Header Links -->
+                <div class="header-links container row push-right">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End of Header -->
+
+            <!-- Hero section -->
+            <div class="hero container row">
+                <div class="hero-text">
+                    <h1>This website is awesome</h1>
+                    <p>
+                        This website has some subtext that goes here under the main title. 
+                        It's a smaller font and the color is lower contrast
+                    </p>
+                    <button class="sign-up">Sign Up</button>
+                </div>
+                <div class="hero-image">
+                    <div>This is a placeholder for an image</div>
+                </div>
+            </div>
+            <!-- End of Hero section -->
+        </div>
+        <!-- End of Section 1 -->
+
+        <!-- Information section -->
+        <div class="information container column">
+            <!-- Information Header -->
+            <div class="information-header container row valign halign">
+                <div>Some random information</div>
+            </div>
+            <!-- Information cards -->
+            <div class="information-cards container row valign halign">
+                <div class="info-card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="info-card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="info-card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="info-card">
+                    <div class="card-img"></div>
+                    <div class="card-text">
+                        This is some subtext under an illustration or image
+                    </div>
+                </div>
+            </div>
+            <!-- End of Information cards -->
+        </div>
+        <!-- End of Information section -->
+
+        <!-- Quote Section -->
+        <div class="quote-section container column valign halign">
+            <div class="quote">
+                This is an inspiring quote, or a testimonial from a customer. 
+                Maybe it's just filling up space, or maybe people will actually read it.
+                Who knows? All I know is that it looks nice.
+            </div>
+            <div class="quote-by">
+                -Thor, God of Thunder
+            </div>
+        </div>
+        <!-- End of Quote Section -->
+
+        <!-- Call to Action - Informational section -->
+        <div class="information container column halign valign">
+            <div class="cta-modal container row">
+                <div class="modal-left">
+                    <div class="modal-header">Call to action! It's time!</div>
+                    <div>Sign up for our product by clicking that button right over there! </div>
+                </div>
+                <div class="modal-right">
+                    <button class="modal sign-up">Sign Up</button>
+                </div>
+            </div>
+        </div>
+        <!-- End of Call to Action Section -->
+
+        <!-- Footer -->
+        <div class="footer container row halign valign">
+            <div>Copyright © The Odin Project </div>
+        </div>
+        <!-- End of Footer -->
+    </div>
 </body>
